flux/apps/cms/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mimsy
  name: api
spec:
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
