flux/apps/cms/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: mimsy
  labels:
    kodai.ch/dns-create: "true"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cms.mimsy.kodai.ch
      secretName: cms-mimsy-kodai-ch-ingress-tls
  rules:
    - host: cms.mimsy.kodai.ch
      http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api
                port:
                  name: http
